# cmake-boilerplate

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  appveyor.yml
include/vca/boilerplate/: get_version.h  get_version.hpp  macros.h  macros.hpp  version.h  version.hpp
src/: CMakeLists.txt
src/c-executable/: main.c
src/c-library/: get_version.c
src/cxx-executable/: main.cpp
src/cxx-library/: get_version.cpp
test/: CMakeLists.txt  check_unit_test.h  main.c  unit_test.h  utility.c
